@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
skinparam linetype orto

skinparam classAttributeIconSize 0

'left to right direction

class Skill
{
    - name
    + Skill(name)
}

class Collaborator {
    - name
    - birthdate
    - admissionDate
    - address
    - phoneNumber
    - email
    - taxpayerNumber
    - identificationDocumentType
    - identificationDocumentNumber
    + Collaborator(name, birthdate, admissionDate, address, phoneNumber, email, \ntaxpayerNumber, identificationDocumentType, identificationDocumentNumber)

}

class AssignSkillsController {
    + assignSkillsController(collaboratorRepository, skillRepository)
    + getCollaborators()
    + getSkills()
    + createSelectedSkillsList()
    + addSelectedSkill(skillName)
    + getSelectedSkillsList()
    + getCollaboratorByIdNumber(collaboratorIdNumber)
    + assignSkill(collaborator, selectedSkillsList)
}

class AssignSkillsUI {
}

class Repositories {
    - Repositories()
    + getInstance() : Repositories
    + getSkillRepository()
    + getCollaboratorRepository()
}

class SkillRepository {
    + getSkills()
    + getSkillByName(skillName)
    + add(skill)
    + getSelectedSkillsList()
}

class CollaboratorRepository {
    + getCollaborators()
    + getCollaboratorByIdNumber(collaboratorIdNumber)
    + assignSkill(collaborator, selectedSkillsList)
}


Collaborator "1" --> "*" Skill: is assigned
AssignSkillsUI ..> AssignSkillsController
AssignSkillsController ...> Repositories: repositories
AssignSkillsController ..> SkillRepository: skillRepository
AssignSkillsController ..> CollaboratorRepository: collaboratorRepository

Repositories -> Repositories : instance
Repositories ---> "1" SkillRepository: skillRepository
Repositories ---> "1" CollaboratorRepository: collaboratorRepository

SkillRepository --> Skill: skills
CollaboratorRepository --> Collaborator: collaborators


@enduml